--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
   <body>
 
-<h1>hi</h1>
-<p>Currently, this is used to handle the requests that are sent to us from our projects, for more information dm .qux.</p>
+<p>used to handle my dev shit, dm .qux. for more info</p>
 
 </body>
 </html>
